--- a/bot.ipynb
+++ b/bot.ipynb
@@ -230,12 +230,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "id": "87020bb7-3b40-4b89-a381-a708f25118d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import pyautogui\n",
+    "import pyautogui\n",
     "def cann_agility():\n",
     "    while(1):\n",
     "        pyautogui.PAUSE = 3.75\n",
@@ -260,18 +260,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "859b2eb0-63dd-4e37-80a2-240f60c82fa6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mcann_agility\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[4], line 12\u001b[0m, in \u001b[0;36mcann_agility\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mclick(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2605\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m479\u001b[39m)\n\u001b[1;32m     11\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2548\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m622\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[43mpyautogui\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mclick\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2548\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m622\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mmoveTo(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2714\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m680\u001b[39m)\n\u001b[1;32m     14\u001b[0m pyautogui\u001b[38;5;241m.\u001b[39mclick(x\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2714\u001b[39m, y\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m680\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyautogui/__init__.py:595\u001b[0m, in \u001b[0;36m_genericPyAutoGUIChecks.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    593\u001b[0m failSafeCheck()\n\u001b[1;32m    594\u001b[0m returnVal \u001b[38;5;241m=\u001b[39m wrappedFunction(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m--> 595\u001b[0m \u001b[43m_handlePause\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m_pause\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    596\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m returnVal\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyautogui/__init__.py:639\u001b[0m, in \u001b[0;36m_handlePause\u001b[0;34m(_pause)\u001b[0m\n\u001b[1;32m    637\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _pause:\n\u001b[1;32m    638\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mint\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(PAUSE, \u001b[38;5;28mfloat\u001b[39m)\n\u001b[0;32m--> 639\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mPAUSE\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "cann_agility()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a8e5cafb-f148-4669-96e6-d13ff5308b00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyautogui as pag\n",
+    "def low_alch(n):\n",
+    "    i = 0\n",
+    "    while (i < n):\n",
+    "        pag.moveTo(x=5279, y=1178, duration=.5)\n",
+    "        pag.click(x=5279, y=1178, duration=.5)\n",
+    "        pag.moveTo(x=5268, y=1167, duration=.5)\n",
+    "        pag.click(x=5268, y=1167, duration=.5)\n",
+    "        i += 1\n",
+    "        return\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5de01d0f-2186-4822-83a6-063b5cc476d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_alch(34)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "214b8e8b-fe1f-4f29-a055-cc049f5d4f0c",
+   "metadata": {},
+   "source": [
+    "# Locating images\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "dbfe6e8d-9a25-4c76-8ebc-a8ead030f26a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Point(x=838, y=995)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyautogui\n",
+    "#locates an image on screen.\n",
+    "find = pyautogui.locateOnScreen(\"login.png\")\n",
+    "#returns center of image.\n",
+    "cen = pyautogui.center(find)\n",
+    "print(cen)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "bee315ff-97fc-4671-8c81-d428ee698b62",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 25\u001b[0m\n\u001b[1;32m     21\u001b[0m   p\u001b[38;5;241m.\u001b[39mmoveTo(login_coord)\n\u001b[1;32m     22\u001b[0m   p\u001b[38;5;241m.\u001b[39mclick()\n\u001b[0;32m---> 25\u001b[0m \u001b[43mlogin\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDjolin1@uncc.edu\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mRocketdan11\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m, in \u001b[0;36mlogin\u001b[0;34m(username, password)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mlogin\u001b[39m(username, password):\n\u001b[1;32m      4\u001b[0m   user \u001b[38;5;241m=\u001b[39m p\u001b[38;5;241m.\u001b[39mlocateOnScreen(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124musername.png\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 5\u001b[0m   user_coord \u001b[38;5;241m=\u001b[39m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcenter\u001b[49m\u001b[43m(\u001b[49m\u001b[43muser\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      6\u001b[0m   p\u001b[38;5;241m.\u001b[39mmoveTo(user_coord)\n\u001b[1;32m      7\u001b[0m   p\u001b[38;5;241m.\u001b[39mmoveRel(\u001b[38;5;241m50\u001b[39m, duration\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m.05\u001b[39m)\n",
+      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/pyscreeze/__init__.py:649\u001b[0m, in \u001b[0;36mcenter\u001b[0;34m(coords)\u001b[0m\n\u001b[1;32m    633\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    634\u001b[0m \u001b[38;5;124;03mReturns a `Point` object with the x and y set to an integer determined by the format of `coords`.\u001b[39;00m\n\u001b[1;32m    635\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    645\u001b[0m \u001b[38;5;124;03mPoint(x=14, y=15)\u001b[39;00m\n\u001b[1;32m    646\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    648\u001b[0m \u001b[38;5;66;03m# TODO - one day, add code to handle a Box namedtuple.\u001b[39;00m\n\u001b[0;32m--> 649\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m Point(\u001b[43mcoords\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m(coords[\u001b[38;5;241m2\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m), coords[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mint\u001b[39m(coords[\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m2\u001b[39m))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "import pyautogui as p\n",
+    "\n",
+    "def login(username, password):\n",
+    "  user = p.locateOnScreen('username.png')\n",
+    "  user_coord = p.center(user)\n",
+    "  p.moveTo(user_coord)\n",
+    "  p.moveRel(50, duration=.05)\n",
+    "  p.click()\n",
+    "  p.typewrite(username, interval=.05)\n",
+    "\n",
+    "  passw = p.locateOnScreen('pass.png')\n",
+    "  pass_coord = p.center(passw)\n",
+    "  p.moveTo(pass_coord)\n",
+    "  p.moveRel(50, duration=.05)\n",
+    "  p.click()\n",
+    "  p.typewrite(password, interval=.05)\n",
+    "\n",
+    "  password = p.locateOnScreen('pass.png')\n",
+    "  login_button = p.locateOnScreen('login.png')\n",
+    "  login_coord = p.center(login_button)\n",
+    "  p.moveTo(login_coord)\n",
+    "  p.click()\n",
+    "\n",
+    "\n",
+    "login('UserName', 'Password')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8246264-05cc-4f81-ba15-d501ccf32be8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "233fa394-8e92-4901-bc6b-ff06498864ea",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -293,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
