openCV corner detection on image

--- a/bot.ipynb
+++ b/bot.ipynb
@@ -398,11 +398,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c8246264-05cc-4f81-ba15-d501ccf32be8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyautogui\n",
+    "\n",
+    "'''\n",
+    "Subscribe to youtube channel bot\n",
+    "1. Open a new tab\n",
+    "2. Search Youtube\n",
+    "3. Search channel\n",
+    "4. Click on channel\n",
+    "5. Click subscribe\n",
+    "'''\n",
+    "#open terminal\n",
+    "pyautogui.hotkey(\"ctrl\", \"alt\", \"t\")\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
